--- a/src/app/page/settings/about/about.component.css
+++ b/src/app/page/settings/about/about.component.css
@@ -85,28 +85,28 @@ td, div {
 }
 
 /* Core */
-#varun { background-image: url("https://insti.app/team-pics/varun.jpg") }
-#sajal { background-image: url("https://insti.app/team-pics/sajal.jpg"); }
+#varun { background-image: url("https://www.insti.app/team-pics/varun.jpg") }
+#sajal { background-image: url("https://www.insti.app/team-pics/sajal.jpg"); }
 
-#nihal { background-image: url("https://insti.app/team-pics/nihal.jpg"); }
-#ydidwania { background-image: url("https://insti.app/team-pics/ydidwania.jpg"); }
-#cheeku { background-image: url("https://insti.app/team-pics/cheeku.jpg"); }
-#sarthak { background-image: url("https://insti.app/team-pics/sarthak.jpg"); }
+#nihal { background-image: url("https://www.insti.app/team-pics/nihal.jpg"); }
+#ydidwania { background-image: url("https://www.insti.app/team-pics/ydidwania.jpg"); }
+#cheeku { background-image: url("https://www.insti.app/team-pics/cheeku.jpg"); }
+#sarthak { background-image: url("https://www.insti.app/team-pics/sarthak.jpg"); }
 
-#soham { background-image: url("https://insti.app/team-pics/soham.jpg"); }
+#soham { background-image: url("https://www.insti.app/team-pics/soham.jpg"); }
 
-#mrunmayi { background-image: url("https://insti.app/team-pics/mrunmayi.jpg"); }
-#owais { background-image: url("https://insti.app/team-pics/owais.jpg"); }
-#hrushikesh { background-image: url("https://insti.app/team-pics/hrushikesh.jpg"); }
-#yashkhem { background-image: url("https://insti.app/team-pics/yashkhem.jpg"); }
-#bavish { background-image: url("https://insti.app/team-pics/bavish.jpg"); }
-#mayu { background-image: url("https://insti.app/team-pics/mayu.jpg"); }
-#maitreya { background-image: url("https://insti.app/team-pics/maitreya.jpg"); }
+#mrunmayi { background-image: url("https://www.insti.app/team-pics/mrunmayi.jpg"); }
+#owais { background-image: url("https://www.insti.app/team-pics/owais.jpg"); }
+#hrushikesh { background-image: url("https://www.insti.app/team-pics/hrushikesh.jpg"); }
+#yashkhem { background-image: url("https://www.insti.app/team-pics/yashkhem.jpg"); }
+#bavish { background-image: url("https://www.insti.app/team-pics/bavish.jpg"); }
+#mayu { background-image: url("https://www.insti.app/team-pics/mayu.jpg"); }
+#maitreya { background-image: url("https://www.insti.app/team-pics/maitreya.jpg"); }
 
-#tomar { background-image: url("https://insti.app/team-pics/tomar.jpg"); }
-#bijoy { background-image: url("https://insti.app/team-pics/bijoy.jpg"); }
-#dheerendra { background-image: url("https://insti.app/team-pics/dheerendra.jpg"); }
-#amangour { background-image: url("https://insti.app/team-pics/amangour.jpg"); }
-#ranveer { background-image: url("https://insti.app/team-pics/ranveer.jpg"); }
+#tomar { background-image: url("https://www.insti.app/team-pics/tomar.jpg"); }
+#bijoy { background-image: url("https://www.insti.app/team-pics/bijoy.jpg"); }
+#dheerendra { background-image: url("https://www.insti.app/team-pics/dheerendra.jpg"); }
+#amangour { background-image: url("https://www.insti.app/team-pics/amangour.jpg"); }
+#ranveer { background-image: url("https://www.insti.app/team-pics/ranveer.jpg"); }
 
-#tty { background-image: url("https://insti.app/team-pics/wncc.jpg"); }
+#tty { background-image: url("https://www.insti.app/team-pics/wncc.jpg"); }
