--- a/src/app/page/settings/settings.component.html
+++ b/src/app/page/settings/settings.component.html
@@ -20,7 +20,7 @@
        mat-list-item target="_blank" rel="noopener">
         <mat-icon>account_circle</mat-icon> &nbsp; Update Profile
     </a>
-    <a href="https://insti.app/feedback"
+    <a href="https://www.insti.app/feedback"
        mat-list-item target="_blank" rel="noopener">
         <mat-icon>feedback</mat-icon> &nbsp; Feedback
     </a>
