--- a/src/app/page/settings/about/about.component.html
+++ b/src/app/page/settings/about/about.component.html
@@ -1,6 +1,14 @@
 <div class="main">
-  <div class="title">Core Developers</div>
 
+  <div class="title">Maintainer</div>
+  <div class="section">
+    <div class="core-dev floating">
+      <div class="pic" id="aakash"></div><br>
+      E. Aakash
+    </div>
+  </div>
+
+  <div class="title">Core Developers</div>
   <div class="section">
     <div class="core-dev floating">
       <div class="pic" id="varun"></div><br>
