Add Bandhu IITB to navbar menu & quicklinks

--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -46,6 +46,12 @@
     <mat-icon>work</mat-icon> &nbsp; Internship Blog
 </a>
 
+<a  href="http://iitb-bandhu.com/" 
+    target="_blank" 
+    mat-list-item>
+    <mat-icon>people</mat-icon> &nbsp; Bandhu IITB
+</a>
+
 <a [routerLink]="['/calendar']"
    routerLinkActive="active-link"
    mat-list-item>
