--- a/src/app/comp/xunk-spinner/xunk-spinner.component.html
+++ b/src/app/comp/xunk-spinner/xunk-spinner.component.html
@@ -1,11 +1,11 @@
 <div class="loading-fader" *ngIf="!error">
-  <img class="p1" src="assets/petal.svg">
-  <img class="p2" src="assets/petal.svg">
-  <img class="p3" src="assets/petal.svg">
-  <img class="p4" src="assets/petal.svg">
-  <img class="p5" src="assets/petal.svg">
-  <img class="p6" src="assets/petal.svg">
-  <img class="p7" src="assets/petal.svg">
+  <img class="logo-instiapp-1" src="assets/petal.svg">
+  <img class="logo-instiapp-2" src="assets/petal.svg">
+  <img class="logo-instiapp-3" src="assets/petal.svg">
+  <img class="logo-instiapp-4" src="assets/petal.svg">
+  <img class="logo-instiapp-5" src="assets/petal.svg">
+  <img class="logo-instiapp-6" src="assets/petal.svg">
+  <img class="logo-instiapp-7" src="assets/petal.svg">
 </div>
 
 <div class="nothing-at-all" *ngIf="error">
