feat: replace list-loading with instiapp-spinner

--- a/src/app/comp/list-loading/list-loading.component.html
+++ b/src/app/comp/list-loading/list-loading.component.html
@@ -1,6 +1,1 @@
-<div class="loading mat-elevation-z2">
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-</div>
+<app-xunk-spinner></app-xunk-spinner>
