--- a/src/app/page/settings/settings.component.html
+++ b/src/app/page/settings/settings.component.html
@@ -34,6 +34,12 @@
       *ngIf="this.dataService.isLoggedIn()">
         <mat-icon>exit_to_app</mat-icon> &nbsp; Logout
     </a>
+    <a style="cursor: pointer"
+      (click)="testnotify()"
+       mat-list-item
+      *ngIf="this.dataService.isLoggedIn()">
+        <mat-icon>notifications_active</mat-icon> &nbsp; Test Notification
+    </a>
   </div>
 
 </div>
