--- a/src/app/page/settings/settings.component.html
+++ b/src/app/page/settings/settings.component.html
@@ -35,7 +35,7 @@
         <mat-icon>exit_to_app</mat-icon> &nbsp; Logout
     </a>    
     <a style="cursor: pointer"
-      (click)="TestNotify()"
+      (click)="testNotify()"
        mat-list-item
       *ngIf="this.dataService.isLoggedIn()">
         <mat-icon>notifications_active</mat-icon> &nbsp; Test Notification
