Move config to environment variables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 
     <div class="fill-space"></div>
     <button mat-button
-            (click)="glogin()"
+            [routerLink]="['/glogin']"
             *ngIf="!this.dataService.isLoggedIn()">
         Google Log In
     </button>
