--- a/src/app/comp/glogin/glogin.component.html
+++ b/src/app/comp/glogin/glogin.component.html
@@ -4,11 +4,15 @@
   <div class="head">
     Follow events, get updates on internships, placements and more. Login with your GSuite account to continue.
   </div>
+  <br/>
+  <div class="head">
+    Note: Only ldap@iitb.ac.in google account will allow login, other gmail account will show 403 error
+  </div>
 
   <button mat-raised-button
           (click)='login()'
           color="accent"
           class="login-button">
-      LOG IN
+      GOOGLE LOG IN
   </button>
 </div>
