--- a/src/app/page/blog/blog.component.html
+++ b/src/app/page/blog/blog.component.html
@@ -18,8 +18,12 @@
 
 <div *ngIf="feed" class="main-div">
   <ng-container *ngFor="let item of feed">
-    <div class="feed-card">
-        <div class="title">{{ item.title }}</div>
+    <div [ngClass]="{
+                 'feed-card': item.pin_unpin== 0, 
+                 'special-feed-card': item.pin_unpin== 1 }">
+        <div [ngClass]="{
+                 'title': item.pin_unpin== 0, 
+                 'special-title': item.pin_unpin== 1}">{{ item.title }}</div>
         {{ item.published | date:"dd-MMM-yyyy HH:mm" }}
         <div [innerHTML]="dataService.processMDHTML(item.content | markdown)" class="markdown"></div>
     </div>
