adding pin icon and background color change on placement blog and training blog being pinned

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'emoji.css';
 @import 'material-design-icons/iconfont/material-icons.css';
+@import '~material-icons/iconfont/material-icons.css';
 
 body, .image-background {
     /* Set font family */
