--- a/src/app/page/blog/blog.component.css
+++ b/src/app/page/blog/blog.component.css
@@ -4,19 +4,17 @@
     font-size: 0.9em;
     margin-bottom: 2.5em;
     border-radius: 10px 15px 15px 10px;
-    color: #fff;
+    color: #070707;
 	padding: 8px;
-    font-weight: bold;
 	border-radius: 5px;
-	animation: blinkingBackground 2s infinite;
+    background-color: #b6c3cf;;
+	
     
 }
 
-@keyframes blinkingBackground{
-    /* providing blinking effect for pinned blog */
-    0%		{ background-color: #b6c3cf;}
-    100%	{ background-color: #85b3ff;}
-    }
+.mat-icon {
+    vertical-align: middle;
+}
 
 .main-div {
     margin: 0 auto;
