--- a/src/app/page/blog/blog.component.html
+++ b/src/app/page/blog/blog.component.html
@@ -23,7 +23,7 @@
                  'special-feed-card': item.pin_unpin== 1 }">
         <div [ngClass]="{
                  'title': item.pin_unpin== 0, 
-                 'special-title': item.pin_unpin== 1}">{{ item.title }}</div>
+                 'special-title': item.pin_unpin== 1}"><mat-icon *ngIf="item.pin_unpin== 1">push_pin</mat-icon>{{ item.title }}</div>
         {{ item.published | date:"dd-MMM-yyyy HH:mm" }}
         <div [innerHTML]="dataService.processMDHTML(item.content | markdown)" class="markdown"></div>
     </div>
