removing bug for unmatching var name in back and frontend

--- a/src/app/page/blog/blog.component.html
+++ b/src/app/page/blog/blog.component.html
@@ -19,11 +19,11 @@
 <div *ngIf="feed" class="main-div">
   <ng-container *ngFor="let item of feed">
     <div [ngClass]="{
-                 'feed-card': item.pin_unpin== 0, 
-                 'special-feed-card': item.pin_unpin== 1 }">
+                 'feed-card': item.pinnned== 0, 
+                 'special-feed-card': item.pinned== 1 }">
         <div [ngClass]="{
-                 'title': item.pin_unpin== 0, 
-                 'special-title': item.pin_unpin== 1}"><mat-icon *ngIf="item.pin_unpin== 1">push_pin</mat-icon>{{ item.title }}</div>
+                 'title': item.pinned== 0, 
+                 'special-title': item.pinned== 1}"><mat-icon *ngIf="item.pinnned== 1">push_pin</mat-icon>{{ item.title }}</div>
         {{ item.published | date:"dd-MMM-yyyy HH:mm" }}
         <div [innerHTML]="dataService.processMDHTML(item.content | markdown)" class="markdown"></div>
     </div>
