Add queries component

--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -47,6 +47,13 @@
 </a>
 
 
+<a [routerLink]="['/query-search/']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>help</mat-icon> &nbsp; Find Answers
+</a>
+
+
 <a [routerLink]="['/calendar']"
    routerLinkActive="active-link"
    mat-list-item>
