--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -46,6 +46,12 @@
     <mat-icon>work</mat-icon> &nbsp; Internship Blog
 </a>
 
+<a [routerLink]="['/external']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>work</mat-icon> &nbsp; external
+</a>
+
 
 <a [routerLink]="['/calendar']"
    routerLinkActive="active-link"
