make external blog login only

--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -49,7 +49,7 @@
 <a [routerLink]="['/external']"
    routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>work</mat-icon> &nbsp; external
+    <mat-icon>work</mat-icon> &nbsp; External Blog
 </a>
 
 
