--- a/src/app/page/external/blog.component.html
+++ b/src/app/page/external/blog.component.html
@@ -22,6 +22,7 @@
         <div class="title">{{ item.title }}</div>
         {{ item.published | date:"dd-MMM-yyyy HH:mm" }}
         <div [innerHTML]="dataService.processMDHTML(item.content | markdown)" class="markdown"></div>
+        By {{ item.body }}
     </div>
   </ng-container>
 </div>
