adding delete function to interests

--- a/src/app/card/interest-card/interest-card.component.html
+++ b/src/app/card/interest-card/interest-card.component.html
@@ -13,7 +13,7 @@
               </p>
               <div class="fixed-bottom">
                 <button class="close" [style.background-color]="toggle ? 'green' : 'red'" mat-button
-                  (click)="onNoClick()">X</button>
+                  (click)="onNoClick(interest)">X</button>
               </div>
 
             </div>
