--- a/src/app/page/achievements/achievements.component.html
+++ b/src/app/page/achievements/achievements.component.html
@@ -37,10 +37,10 @@
 
         <!-- <app-achievement-new *ngIf="!dataService.isMobile()"></app-achievement-new> -->
         <mat-tab-group>
-            <mat-tab label="First">
+            <mat-tab label="New Achievement">
                 <app-achievement-new *ngIf="!dataService.isMobile()"></app-achievement-new>
             </mat-tab>
-            <mat-tab label="Second">
+            <mat-tab label="New Skill">
                 <app-skills-new *ngIf="!dataService.isMobile()"></app-skills-new>
 
 
