--- a/src/app/page/user-details/user-details.component.css
+++ b/src/app/page/user-details/user-details.component.css
@@ -28,6 +28,12 @@ a {
     width: 320px;
 }
 
+.nhui{
+    width: 50%;
+    background-color: powderblue;
+}
+
+
 #info-header {
     margin: 20px 0 0 0;
 }
