--- a/src/app/comp/search-box/search-box.component.html
+++ b/src/app/comp/search-box/search-box.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="half-width add-person">
+<mat-form-field class="full-width add-person">
   <input #roll matInput #addBox [placeholder]="placeholder" [matAutocomplete]="auto" [formControl]="addForm">
 
   <mat-autocomplete name="personauto" #auto (optionSelected)="selected($event)">
