--- a/src/app/page/user-details/user-details.component.css
+++ b/src/app/page/user-details/user-details.component.css
@@ -32,7 +32,12 @@ a {
     width: 50%;
     background-color: powderblue;
 }
+.interest_search
+{
+    width: 40%;
+    padding-left: 2%;
 
+}
 
 #info-header {
     margin: 20px 0 0 0;
