--- a/src/app/page/user-details/user-details.component.html
+++ b/src/app/page/user-details/user-details.component.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="follow-sec">
-      <div class="rl-header sm">Intrests</div>
+      <div class="rl-header sm">Interests</div>
 
     </div>
   </div>
