--- a/src/app/page/add-event/add-event.component.html
+++ b/src/app/page/add-event/add-event.component.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="full-width-details">
-          <app-search-box exploreProp="interests" displayProp="title" placeholder="Interested to be notified"
+          <app-search-box exploreProp="interests" displayProp="title" placeholder="Notify according to interests"
             hint="Enter a Interest" (change)="setInterest($event)">
           </app-search-box>
 
