Added discussions page to nav menu
It is now accessible

--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -72,6 +72,12 @@
     <mat-icon>map</mat-icon> &nbsp; Map
 </a>
 
+<a [routerLink]="['/discussions']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>done_all</mat-icon> &nbsp; Discussions
+</a>
+
 <a [routerLink]="['/achievements']"
    routerLinkActive="active-link"
    mat-list-item>
